refactor: fixed tests not compiling